# chat-with-text-QDclient

./: .gitignore  Cargo.toml  README.md  sentences_stemmed.txt
src/: lib.rs  main.rs
