[package]
name = "chat_with_text_local"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["lib", "dylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]

serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4"
tokio = { version = "1.25.1", features = ["full"] }
anyhow = "1"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2"
async-openai = "0.12.0"
rust-bert = "0.21.0"
tch = "0.13.0"
rust_tokenizers = "8.1.0"
tiktoken-rs = "0.4.4"
qdrant-client = { version = "1.3.0", features = ["reqwest", "serde"] }
http_req = "0.9.1"
